--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -93,7 +93,7 @@ jobs:
           done
 
           if [ -n "${REMOVE_FORMULAS}" ]; then
-            brew uninstall ${REMOVE_FORMULAS}
+            brew uninstall --ignore-dependencies ${REMOVE_FORMULAS}
           fi
 
       - name: 'Install dependencies'
@@ -213,7 +213,7 @@ jobs:
       - name: 'Build libobs and obs-frontend-api'
         if: steps.libobs-cache.outputs.cache-hit != 'true'
         working-directory: 'plugin'
-        run: ./CI/linux/02_build_obs-libs.sh --disable-pipewire
+        run: ./CI/linux/02_build_obs_libs.sh --disable-pipewire
 
       - name: 'Build plugin'
         working-directory: 'plugin'
